package(default_visibility = ["//visibility:public"])

load(
    "@io_bazel_rules_rust//rust:rust.bzl",
    "rust_binary",
    "rust_doc",
)

rust_binary(
    name = "hello",
    srcs = ["hello.rs"],
    deps = [ "//cargo:string_interner" ],
)

rust_doc(
    name = "hello_doc",
    dep = ":hello",
)
